--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT= 5500
 
-DATABASE_URL="mysql://root:123456@localhost:3308/financesdb?schema=public"
+DATABASE_URL="mysql://root:123456@26.225.137.129:3308/financesdb?schema=public"
